tests/errors/def_func_01.py
def func_01(x : str) -> str:
    print(x)

func_01()